# cvs-rs

./: .gitignore  .gitmodules  BUGS  ChangeLog  FAQ  GPG-TODO  HACKING  INSTALL-CVS  KEYS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  cvs.spec.in  cvsnt.dep  cvsnt.dsp  cvsnt.mak  makewin32.cmd  rust-map  rustify
contrib/: ChangeLog  Makefile.in  commit_prep.pl  cvs_acls.html  cvs_acls.pl  cvslog.sh  log_accum.pl  rcs-5.7-commitid.patch  rcs-5.7-sameuserlocks.patch  rcs-5.7-security.patch  validate_repo.pl
contrib/pam/: ChangeLog  Makefile.in
diff/: ChangeLog  Makefile.in  libdiff.dep  libdiff.dsp  system.h
doc/: .gitignore  ChangeLog  Makefile.in  RCSFILES  cvs.1  cvs.texinfo  cvsclient.texi  mkman.pl  stamp-1  stamp-vti
doc/i18n/: ChangeLog  Makefile.in
doc/i18n/pt_BR/: ChangeLog  LEIAME  Makefile.in  cvs.texinfo  glossary
emx/: .gitignore  ChangeLog  filesubr.c
lib/: .gitignore  ChangeLog  Makefile.am  Makefile.gnulib  Makefile.in  errno.in.h  getdate.c  getlogin_r.c  glob-libc.h  glob.c  glob.in.h  libcvs.dep  libcvs.dsp  libcvs.mak  mman.h  sighandle.c  stdio.in.h  strings.in.h  sunos57-select.c  sys_select.in.h  sys_socket.in.h  sys_stat.in.h  sys_time.in.h  system.h  test-getdate.sh  time.in.h  vasnprintf.c  wait.h  wctype.in.h  xselect.h
lib/uniwidth/: .gitignore
m4/: ChangeLog  acx_with_gssapi.m4  gnulib-cache.m4  gnulib-comp.m4  sunos57-select.m4
maint-aux/: Makefile.am  Makefile.in  gnulib-filelist.txt  gnulib-update
man/: ChangeLog  Makefile.in
os2/: .gitignore  ChangeLog  filesubr.c
patches/: build.patch  series
patches/c/: array-size.patch  explicit-enum-initializer.patch  no-tracing.patch  simplify-checksum-type.patch  static-variables-referenced-in-pattern.patch
patches/rust/: fix-loops.patch  lift-scope.patch  non-copyable.patch  nullable-functions.patch  public.patch  same-crate.patch  static-strings.patch  uninitialized.patch
src/: ChangeLog  Makefile.am  Makefile.in  add.c  admin.c  annotate.c  base.c  base.h  buffer.c  buffer.h  checkin.c  checkout.c  classify.c  classify.h  client.c  client.h  command_line_opt.h  commit.c  create_adm.c  cvs.h  cvsrc.c  diff.c  diff.h  difflib.c  difflib.h  edit.c  edit.h  entries.c  entries.h  error.c  exithandle.c  expand_path.c  fileattr.c  filesubr.c  filesubr.h  find-names.h  find_names.c  gpg.c  gpg.h  gssapi-client.c  (+65 more)
tools/: ChangeLog  Makefile.in
vms/: ChangeLog  Makefile.am  Makefile.in  build_vms.com  config.h.in  filesubr.c  vms.h
windows-NT/: .gitignore  ChangeLog  Makefile.am  Makefile.in  canonicalize.c  config.h.in.footer  config.h.in.in  dirent.c  dirent.h  filesubr.c  fix-msvc-mak.pl  inttypes.h  mkconfig.pl  mkdir.c  stamp-chi  stdbool.h  stdint.h  strtoimax.c  strtoumax.c
windows-NT/SCC/: ChangeLog  Makefile.in
windows-NT/arpa/: ChangeLog
windows-NT/netinet/: ChangeLog
windows-NT/sys/: ChangeLog
zlib/: .gitignore
